--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="UTF-8">
-    <title>Wine_dbp.0.2</title>
+    <title>Wine0.3</title>
     
 
   </head>
@@ -17,6 +17,7 @@
     <title>Pasaporte del Vino</title>
     <!-- Nota: Para probar en local con un dominio como 'miapp.dev', configura tu archivo hosts (/etc/hosts en Unix o C:\Windows\System32\drivers\etc\hosts en Windows) agregando '127.0.0.1 miapp.dev' y usa un servidor local como 'http-server' de Node.js o Python's 'python -m http.server' para servir el archivo en http://miapp.dev:8080 o similar. Esto permite que history.pushState funcione sin problemas. Si abres directamente como file://, la navegación podría no actualizar la URL visiblemente, pero el contenido cambiará. -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
     <style>
         /* CSS para diseño moderno y responsive */
         * {
@@ -174,6 +175,74 @@
             background-color: #218838; /* Verde más oscuro en hover */
         }
 
+        form {
+            max-width: 400px;
+            margin: 0 auto;
+            text-align: left;
+        }
+
+        label {
+            display: block;
+            margin-top: 15px;
+            font-weight: bold;
+        }
+
+        input[type="email"],
+        input[type="password"],
+        input[type="tel"] {
+            width: 100%;
+            padding: 10px;
+            margin-top: 5px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+
+        .password-container {
+            position: relative;
+        }
+
+        .password-container input {
+            padding-right: 40px;
+        }
+
+        .password-container i {
+            position: absolute;
+            right: 10px;
+            top: 50%;
+            transform: translateY(-50%);
+            cursor: pointer;
+            color: #999;
+        }
+
+        button[type="submit"] {
+            background-color: #800020;
+            color: white;
+            padding: 10px;
+            width: 100%;
+            border: none;
+            border-radius: 5px;
+            margin-top: 20px;
+            cursor: pointer;
+        }
+
+        button[type="submit"]:hover {
+            background-color: #660018;
+        }
+
+        #error-message {
+            color: red;
+            margin-top: 10px;
+        }
+
+        #success-message {
+            color: green;
+            margin-top: 10px;
+        }
+
+        #qr-code {
+            margin-top: 20px;
+        }
+
         footer {
             display: flex;
             justify-content: space-around;
@@ -279,7 +348,30 @@
         </section>
         <section id="registrar" class="page">
             <h1>Registrar pasaporte</h1>
-            <p>Contenido para registrar el pasaporte.</p>
+            <form id="register-form">
+                <label for="email">Email:</label>
+                <input type="email" id="email" required>
+
+                <label for="password">Contraseña:</label>
+                <div class="password-container">
+                    <input type="password" id="password" required>
+                    <i class="fas fa-eye" id="toggle-password"></i>
+                </div>
+
+                <label for="confirm-password">Confirmar Contraseña:</label>
+                <div class="password-container">
+                    <input type="password" id="confirm-password" required>
+                    <i class="fas fa-eye" id="toggle-confirm-password"></i>
+                </div>
+
+                <label for="tlf">Teléfono (opcional):</label>
+                <input type="tel" id="tlf">
+
+                <button type="submit">Crear Pasaporte</button>
+            </form>
+            <div id="error-message"></div>
+            <div id="success-message"></div>
+            <div id="qr-code"></div>
         </section>
         <section id="mipasaporte" class="page">
             <h1>Mi pasaporte</h1>
@@ -581,7 +673,7 @@
             // Inicializar DB al cargar
             initDB();
 
-            // Exposición de funciones para uso en páginas (más tarde)
+            // Exposición de funciones para uso en páginas
             window.db = {
                 addPasaporte,
                 getPasaporte,
@@ -600,12 +692,84 @@
                 deleteNotificacion,
                 addMensaje,
                 getMensajesByPasaporte,
-                updateMensaje
+                updateMensaje,
+                getTable // Agregado para verificaciones
             };
 
-            // Ejemplo de uso (para testing, remover más tarde)
-            // console.log(db.addPasaporte({ email: 'test@example.com', password: '123', tlf: '123456789' }));
-            // console.log(db.getTable('Pasaporte'));
+            // Manejo del formulario de registro
+            const registerForm = document.getElementById('register-form');
+            const errorMessage = document.getElementById('error-message');
+            const successMessage = document.getElementById('success-message');
+            const qrCodeDiv = document.getElementById('qr-code');
+
+            // Toggle password visibility
+            const togglePassword = document.getElementById('toggle-password');
+            const passwordInput = document.getElementById('password');
+            togglePassword.addEventListener('click', () => {
+                const type = passwordInput.type === 'password' ? 'text' : 'password';
+                passwordInput.type = type;
+                togglePassword.classList.toggle('fa-eye');
+                togglePassword.classList.toggle('fa-eye-slash');
+            });
+
+            const toggleConfirmPassword = document.getElementById('toggle-confirm-password');
+            const confirmPasswordInput = document.getElementById('confirm-password');
+            toggleConfirmPassword.addEventListener('click', () => {
+                const type = confirmPasswordInput.type === 'password' ? 'text' : 'password';
+                confirmPasswordInput.type = type;
+                toggleConfirmPassword.classList.toggle('fa-eye');
+                toggleConfirmPassword.classList.toggle('fa-eye-slash');
+            });
+
+            registerForm.addEventListener('submit', (e) => {
+                e.preventDefault();
+                errorMessage.textContent = '';
+                successMessage.textContent = '';
+                qrCodeDiv.innerHTML = '';
+
+                const email = document.getElementById('email').value.trim();
+                const password = document.getElementById('password').value;
+                const confirmPassword = document.getElementById('confirm-password').value;
+                const tlf = document.getElementById('tlf').value.trim();
+
+                // Validar email formato
+                const emailRegex = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
+                if (!emailRegex.test(email)) {
+                    errorMessage.textContent = 'Formato de email inválido.';
+                    return;
+                }
+
+                // Verificar si email existe
+                const pasaportes = db.getTable('Pasaporte');
+                if (pasaportes.some(p => p.email === email && p.activo === 1)) {
+                    errorMessage.textContent = 'El email ya existe.';
+                    return;
+                }
+
+                // Verificar passwords coinciden
+                if (password !== confirmPassword) {
+                    errorMessage.textContent = 'Las contraseñas no coinciden.';
+                    return;
+                }
+
+                if (!password) {
+                    errorMessage.textContent = 'La contraseña es obligatoria.';
+                    return;
+                }
+
+                // Crear pasaporte
+                const newPasaporte = db.addPasaporte({ email, password, tlf });
+
+                successMessage.textContent = 'Pasaporte creado exitosamente.';
+
+                // Generar QR
+                const qrUrl = `airooc41n.github.io/miapp?email=${encodeURIComponent(email)}&Id=${newPasaporte.id_pasaporte}`;
+                new QRCode(qrCodeDiv, {
+                    text: qrUrl,
+                    width: 128,
+                    height: 128
+                });
+            });
         });
     </script>
 </body>
