--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     const apps = [
         // Ejemplo:
         // { title: "OpenAI", url: "https://openai.com" }
-        { title: "Nombre de la App", url: "./leaFlet-OVS.html" },
+        { title: "Nombre de la App", url: "https://airooc41n.github.io/miapp/leaFlet-OSV.html" },
         { title: "Nombre de la App", url: "https://ejemplo.com" },
         { title: "Nombre de la App", url: "https://ejemplo.com" },
         { title: "Nombre de la App", url: "https://ejemplo.com" },
