--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
     const apps = [
         // Ejemplo:
         // { title: "OpenAI", url: "https://openai.com" }
-        { title: "Nombre de la App", url: "https://airooc41n.github.io/miapp/leaFlet-OSV.html" },
-        { title: "Nombre de la App", url: "https://ejemplo.com" },
-        { title: "Nombre de la App", url: "https://ejemplo.com" },
-        { title: "Nombre de la App", url: "https://ejemplo.com" },
-        { title: "Nombre de la App", url: "https://ejemplo.com" },
-        { title: "Nombre de la App", url: "https://ejemplo.com" },
+        { title: "LeaFlet+OSV", url: "https://airooc41n.github.io/miapp/leaFlet-OSV.html" },
+        { title: "Pasaporte Vino v0.10", url: "https://airooc41n.github.io/miapp/wine-v0.10.html" },
+        { title: "Pasaporte Vino v0.11", url: "https://airooc41n.github.io/miapp/wine-v0.11.html" },
+        { title: "Pasaporte Vino v0.11.1", url: "https://airooc41n.github.io/miapp/wine-v0.11.1.html" },
+        { title: "Pasaporte Vino v0.11.2", url: "https://airooc41n.github.io/miapp/wine-v0.11.2.html" },
+        { title: "Pasaporte Vino v0.11.3", url: "https://airooc41n.github.io/miapp/wine-v0.11.3.html" },
     ];
 
     const grid = document.getElementById("grid");
