--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     h1 {
         text-align: center;
-        padding: 20px 0;
+        padding: 18px 0;
         margin: 0;
         font-size: 2.2rem;
         background: #fff;
@@ -23,12 +23,13 @@
     .container {
         max-width: 1100px;
         margin: 20px auto;
-        padding: 0 20px;
+        padding: 0 18px;
     }
 
+    /* ===== GRID MÁS RESPONSIVE ===== */
     .grid {
-        display: flex;
-        flex-wrap: wrap;
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
         gap: 18px;
         justify-content: center;
     }
@@ -38,10 +39,12 @@
         border-radius: 14px;
         box-shadow: 0 8px 20px rgba(0,0,0,0.08);
         overflow: hidden;
-        width: 260px;
         text-decoration: none;
         color: #333;
         transition: transform .2s ease, box-shadow .2s ease;
+        display: flex;
+        flex-direction: column;
+        min-height: 100%;
     }
 
     .app-card:hover {
@@ -58,21 +61,46 @@
     }
 
     .app-title {
-        padding: 15px;
+        padding: 16px 18px 10px;
         font-size: 1.05rem;
-        font-weight: 700;
+        font-weight: 800;
+        line-height: 1.2;
     }
 
     .app-url {
-        padding: 0 15px 15px;
+        padding: 0 18px 18px;
         font-size: 0.9rem;
         color: #666;
-        word-break: break-all;
+        word-break: break-word;
     }
 
+    /* ===== RESPONSIVE MÓVIL ===== */
     @media (max-width: 600px) {
-        .app-card {
-            width: 100%;
+        h1 {
+            font-size: 1.8rem;
+        }
+
+        .container {
+            margin: 12px auto;
+            padding: 0 14px;
+        }
+
+        .grid {
+            gap: 14px;
+        }
+
+        .app-img {
+            height: 140px;
+        }
+
+        .app-title {
+            padding: 14px 16px 8px;
+            font-size: 1rem;
+        }
+
+        .app-url {
+            padding: 0 16px 16px;
+            font-size: 0.85rem;
         }
     }
 </style>
@@ -86,10 +114,7 @@
 </div>
 
 <script>
-    // Lista inicial vacía (irás añadiendo enlaces)
     const apps = [
-        // Ejemplo:
-        // { title: "OpenAI", url: "https://openai.com" }
         { title: "LeaFlet+OSV", url: "https://airooc41n.github.io/miapp/leaFlet-OSV.html" },
         { title: "Pasaporte Vino v0.10", url: "https://airooc41n.github.io/miapp/wine-v0.10.html" },
         { title: "Pasaporte Vino v0.11.1", url: "https://airooc41n.github.io/miapp/wine-v0.11.1.html" },
@@ -107,7 +132,6 @@
             card.href = app.url;
             card.target = "_blank";
 
-            // preview con mshots (WordPress)
             const imgSrc = `https://s.wordpress.com/mshots/v1/${encodeURIComponent(app.url)}?w=600`;
 
             card.innerHTML = `
