--- a/index.html
+++ b/index.html
@@ -76,6 +76,12 @@
     }
 
     /* ===== RESPONSIVE MÓVIL ===== */
+  /* MÓVIL: una sola columna */
+    @media (max-width: 600px) {
+        .grid {
+            grid-template-columns: 1fr;
+        }
+    }
     @media (min-width: 601px) and (max-width: 1024px) {
         h1 {
             font-size: 1.8rem;
