--- a/index.html
+++ b/index.html
@@ -76,12 +76,6 @@
     }
 
     /* ===== RESPONSIVE MÓVIL ===== */
-  /* MÓVIL: una sola columna */
-    @media (max-width: 600px) {
-        .grid {
-            grid-template-columns: 1fr;
-        }
-    }
     @media (min-width: 601px) and (max-width: 1024px) {
         h1 {
             font-size: 1.8rem;
@@ -108,6 +102,13 @@
         .app-url {
             padding: 0 16px 16px;
             font-size: 0.85rem;
+        }
+    }
+
+    /* ===== MÓVIL: UNA COLUMNA ===== */
+    @media (max-width: 600px) {
+        .grid {
+            grid-template-columns: 1fr;
         }
     }
 </style>
