--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     /* ===== GRID MÁS RESPONSIVE ===== */
     .grid {
         display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
-        gap: 20px;
+        grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+        gap: 30px;
         justify-content: center;
     }
 
@@ -106,11 +106,11 @@
     }
 
     /* ===== MÓVIL: UNA COLUMNA ===== */
-    @media (max-width: 600px) {
+    /*@media (max-width: 600px) {
         .grid {
             grid-template-columns: 1fr;
         }
-    }
+    }*/
 </style>
 </head>
 <body>
