--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         text-align: center;
         padding: 18px 0;
         margin: 0;
-        font-size: 3rem;
+        font-size: 50px;
         background: #fff;
         box-shadow: 0 2px 8px rgba(0,0,0,0.08);
     }
@@ -54,7 +54,7 @@
 
     .app-img {
         width: 100%;
-        height: 160px;
+        /*height: 240px;*/
         object-fit: cover;
         display: block;
         background: #ddd;
@@ -63,22 +63,19 @@
     .app-title {
         text-align: center;
         padding: 16px 18px 10px;
-        font-size: 2rem;
+        font-size: 20px;
         font-weight: 800;
         line-height: 1.2;
     }
 
     .app-url {
         padding: 0 18px 18px;
-        font-size: 0.9rem;
+        font-size: 12px;
         color: #666;
         word-break: break-word;
     }
 
 @media (min-width: 1200px) {
-        h1 {
-            font-size: 3rem;
-        }
 
         .container {
             margin: 12px auto;
@@ -96,12 +93,10 @@
 
         .app-title {
             padding: 14px 16px 8px;
-            font-size: 2rem;
         }
 
         .app-url {
             padding: 0 16px 16px;
-            font-size: 1.2rem;
         }
     }
 
