--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             card.innerHTML = `
                 <img class="app-img" src="${imgSrc}" alt="Preview de ${app.title}">
                 <div class="app-title">${app.title}</div>
-                <div class="app-url">${app.url}</div>
+                /*<div class="app-url">${app.url}</div>*/
             `;
 
             grid.appendChild(card);
