--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     body {
         margin: 0;
         font-family: Arial, sans-serif;
-        background: #f4f6f8;
+        background-color: rgb(51, 51, 51);
         color: #333;
     }
 
