--- a/index.html
+++ b/index.html
@@ -100,6 +100,8 @@
         { title: "Pasaporte Vino v0.11.1", url: "https://airooc41n.github.io/miapp/wine-v0.11.1.html" },
         { title: "Pasaporte Vino v0.11.2", url: "https://airooc41n.github.io/miapp/wine-v0.11.2.html" },
         { title: "Pasaporte Vino v0.11.3", url: "https://airooc41n.github.io/miapp/wine-v0.11.3.html" },
+        { title: "Grid Apps", url: "https://airooc41n.github.io/miapp/apps.html" },
+        
     ];
 
     const grid = document.getElementById("grid");
