--- a/index.html
+++ b/index.html
@@ -179,14 +179,14 @@
         title: "Pste. Vino v0.11.3",
         url: "https://airooc41n.github.io/miapp/wine-v0.11.3.html"
       },
-      {
-        title: "Pste. Vino v0.11.2",
-        url: "https://airooc41n.github.io/miapp/wine-v0.11.2.html"
-      },
-      {
-        title: "Pste. Vino v0.11.1",
-        url: "https://airooc41n.github.io/miapp/wine-v0.11.1.html"
-      },
+      //{
+      //  title: "Pste. Vino v0.11.2",
+      //  url: "https://airooc41n.github.io/miapp/wine-v0.11.2.html"
+      //},
+      //{
+      // title: "Pste. Vino v0.11.1",
+      //  url: "https://airooc41n.github.io/miapp/wine-v0.11.1.html"
+      //},
       {
         title: "Map LeaFlet+OSV",
         url: "https://airooc41n.github.io/miapp/leaFlet-OSV.html"
