--- a/index.html
+++ b/index.html
@@ -172,6 +172,10 @@
     // ── Aquí añades tus aplicaciones ────────────────────────────────
     const apps = [
       {
+        title: "Pste. Vino v0.11.5",
+        url: "https://airooc41n.github.io/miapp/wine-v0.11.5.html"
+      },
+      {
         title: "Pste. Vino v0.11.4",
         url: "https://airooc41n.github.io/miapp/wine-v0.11.4.html"
       },
@@ -179,14 +183,6 @@
         title: "Pste. Vino v0.11.3",
         url: "https://airooc41n.github.io/miapp/wine-v0.11.3.html"
       },
-      //{
-      //  title: "Pste. Vino v0.11.2",
-      //  url: "https://airooc41n.github.io/miapp/wine-v0.11.2.html"
-      //},
-      //{
-      // title: "Pste. Vino v0.11.1",
-      //  url: "https://airooc41n.github.io/miapp/wine-v0.11.1.html"
-      //},
       {
         title: "Map LeaFlet+OSV",
         url: "https://airooc41n.github.io/miapp/leaFlet-OSV.html"
