--- a/index.html
+++ b/index.html
@@ -172,6 +172,10 @@
     // ── Aquí añades tus aplicaciones ────────────────────────────────
     const apps = [
       {
+        title: "Pste. Vino v0.11.7",
+        url: "https://airooc41n.github.io/miapp/wine-v0.11.7.html"
+      },
+      {
         title: "Pste. Vino v0.11.6",
         url: "https://airooc41n.github.io/miapp/wine-v0.11.6.html"
       },
