Add GrapesJS-v0.2 link to index.html

--- a/index.html
+++ b/index.html
@@ -179,6 +179,10 @@
         title: "Map LeaFlet+OSV",
         url: "https://airooc41n.github.io/miapp/leaFlet-OSV.html"
       },
+      {
+        title: "GrapesJS-v0.2.html",
+        url: "https://airooc41n.github.io/miapp/GrapesJS-v0.2.html"
+      },
       // Añade más cuando quieras...
       // {
       //   title: "Nombre App",
