Update GrapesJS link to version 0.3

--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@
         url: "https://airooc41n.github.io/miapp/leaFlet-OSV.html"
       },
       {
-        title: "GrapesJS-v0.2.html",
-        url: "https://airooc41n.github.io/miapp/GrapesJS-v0.2.html"
+        title: "GrapesJS-v0.3",
+        url: "https://airooc41n.github.io/miapp/GrapesJS-v0.3.html"
       },
       // Añade más cuando quieras...
       // {
