Add new jsQR-Scan versions to index.html

--- a/index.html
+++ b/index.html
@@ -176,6 +176,14 @@
         url: "https://airooc41n.github.io/miapp/wine-v0.11.9.html"
       },
       {
+        title: "jsQR-Scan-v0.1",
+        url: "https://airooc41n.github.io/miapp/jsQR-Scan-v0.1.html"
+      },
+      {
+        title: "jsQR-Scan-v0.2",
+        url: "https://airooc41n.github.io/miapp/jsQR-Scan-v0.2.html"
+      },
+      {
         title: "Map LeaFlet+OSV",
         url: "https://airooc41n.github.io/miapp/leaFlet-OSV.html"
       },
@@ -183,6 +191,7 @@
         title: "GrapesJS-v0.3",
         url: "https://airooc41n.github.io/miapp/GrapesJS-v0.3.html"
       },
+      //
       // Añade más cuando quieras...
       // {
       //   title: "Nombre App",
