--- a/index.html
+++ b/index.html
@@ -172,6 +172,10 @@
     // ── Aquí añades tus aplicaciones ────────────────────────────────
     const apps = [
       {
+        title: "Pste. Vino v0.11.10",
+        url: "https://airooc41n.github.io/miapp/wine-v0.11.10.html"
+      },
+      {
         title: "Pste. Vino v0.11.9",
         url: "https://airooc41n.github.io/miapp/wine-v0.11.9.html"
       },
@@ -191,7 +195,7 @@
         title: "GrapesJS-v0.3",
         url: "https://airooc41n.github.io/miapp/GrapesJS-v0.3.html"
       },
-      //
+      // wine-v0.11.10.html Qwen
       // Añade más cuando quieras...
       // {
       //   title: "Nombre App",
