Modify Pste. Vino app entries in index.html
Updated application titles and URLs for Pste. Vino.

--- a/index.html
+++ b/index.html
@@ -172,8 +172,12 @@
     // ── Aquí añades tus aplicaciones ────────────────────────────────
     const apps = [
       {
-        title: "Pste. Vino v0.11.10",
-        url: "https://airooc41n.github.io/miapp/wine-v0.11.10.html"
+        title: "Pste. Vino v0.11.10 Qwen",
+        url: "https://airooc41n.github.io/miapp/wine-v0.11.10_Qwen.html"
+      },
+      {
+        title: "Pste. Vino v0.11.10 Gemini",
+        url: "https://airooc41n.github.io/miapp/wine-v0.11.10_Gemini.html"
       },
       {
         title: "Pste. Vino v0.11.9",
