Add new wine entry for v0.11.10 DeepSeek

--- a/index.html
+++ b/index.html
@@ -180,6 +180,10 @@
         url: "https://airooc41n.github.io/miapp/wine-v0.11.10_Gemini.html"
       },
       {
+        title: "Pste. Vino v0.11.10 DeepSeek",
+        url: "https://airooc41n.github.io/miapp/wine-v0.11.10_DeepSeek.html"
+      },
+      {
         title: "Pste. Vino v0.11.9",
         url: "https://airooc41n.github.io/miapp/wine-v0.11.9.html"
       },
@@ -199,7 +203,7 @@
         title: "GrapesJS-v0.3",
         url: "https://airooc41n.github.io/miapp/GrapesJS-v0.3.html"
       },
-      // wine-v0.11.10.html Qwen
+      // 
       // Añade más cuando quieras...
       // {
       //   title: "Nombre App",
