--- a/wine-v0.11.10_Gemini.html
+++ b/wine-v0.11.10_Gemini.html
@@ -515,7 +515,7 @@
 
 <footer>
 <span class="icon home" title="Inicio" onclick="navigateTo('inicio')"><i class="fas fa-house"></i></span>
-<span>2026-v0.12</span>
+<span>v0.11.10</span>
 <span class="icon options" title="Opciones" onclick="toggleContextMenu()"><i class="fas fa-ellipsis-v"></i></span>
 </footer>
 <div id="context-menu">
@@ -1369,3 +1369,4 @@ document.addEventListener('DOMContentLoaded', () => {
 </script>
 </body>
 </html>
+
