--- a/index.html
+++ b/index.html
@@ -171,14 +171,10 @@
   <script>
     // ── Aquí añades tus aplicaciones ────────────────────────────────
     const apps = [
-      /*{
-        title: "Pste. Vino v0.11.10 Qwen",
-        url: "https://airooc41n.github.io/miapp/wine-v0.11.10_Qwen.html"
-      },
       {
-        title: "Pste. Vino v0.11.10 DeepSeek",
-        url: "https://airooc41n.github.io/miapp/wine-v0.11.10_DeepSeek.html"
-      },*/
+        title: "Pste. Vino v0.11.11",
+        url: "https://airooc41n.github.io/miapp/wine-v0.11.11.html"
+      },
       {
         title: "Pste. Vino v0.11.10 Gemini",
         url: "https://airooc41n.github.io/miapp/wine-v0.11.10_Gemini.html"
