--- a/index.html
+++ b/index.html
@@ -172,20 +172,12 @@
     // ── Aquí añades tus aplicaciones ────────────────────────────────
     const apps = [
       {
+        title: "Pste. Vino v0.12",
+        url: "https://airooc41n.github.io/miapp/wine-v0.12_DeepSeek.html"
+      },
+      {
         title: "Pste. Vino v0.11.11",
         url: "https://airooc41n.github.io/miapp/wine-v0.11.11.html"
-      },
-      {
-        title: "Pste. Vino v0.11.10 Gemini",
-        url: "https://airooc41n.github.io/miapp/wine-v0.11.10_Gemini.html"
-      },
-      {
-        title: "Pste. Vino v0.11.9",
-        url: "https://airooc41n.github.io/miapp/wine-v0.11.9.html"
-      },
-      {
-        title: "jsQR-Scan-v0.1",
-        url: "https://airooc41n.github.io/miapp/jsQR-Scan-v0.1.html"
       },
       {
         title: "jsQR-Scan-v0.2",
