--- a/index.html
+++ b/index.html
@@ -172,6 +172,10 @@
     // ── Aquí añades tus aplicaciones ────────────────────────────────
     const apps = [
       {
+        title: "Pste. Vino v0.12.1",
+        url: "https://airooc41n.github.io/miapp/wine-v0.12.1_DeepSeek.html"
+      },
+      {
         title: "Pste. Vino v0.12",
         url: "https://airooc41n.github.io/miapp/wine-v0.12_DeepSeek.html"
       },
