--- a/index.html
+++ b/index.html
@@ -170,7 +170,11 @@
 
   <script>
     // ── Aquí añades tus aplicaciones ────────────────────────────────
-    const apps = [    
+    const apps = [       
+      {
+        title: "Pste. Vino v0.12.4_G",
+        url: "https://airooc41n.github.io/miapp/wine-v0.12.4_G.html"
+      },
       {
         title: "Pste. Vino v0.12.3",
         url: "https://airooc41n.github.io/miapp/wine-v0.12.3_DeepSeek.html"
