--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
     // ── Aquí añades tus aplicaciones ────────────────────────────────
     const apps = [       
       {
-        title: "Pste. Vino v0.12.4_G",
+        title: "Pste. Vino v0.12.4",
         url: "https://airooc41n.github.io/miapp/wine-v0.12.4_G.html"
       },
       {
