--- a/wine-v0.12.4_G.html
+++ b/wine-v0.12.4_G.html
@@ -2041,7 +2041,7 @@
 
 <footer>
 <span class="icon home" title="Inicio" onclick="navigateTo('inicio')"><i class="fas fa-house"></i></span>
-<span>2026-v0.12.4_G</span>
+<span>2026-v0.12.4</span>
 <span class="icon options" title="Opciones" onclick="toggleContextMenu()"><i class="fas fa-ellipsis-v"></i></span>
 </footer>
 <div id="context-menu">
