--- a/index.html
+++ b/index.html
@@ -170,9 +170,13 @@
 
   <script>
     // ── Aquí añades tus aplicaciones ────────────────────────────────
-    const apps = [       
+    const apps = [      
       {
-        title: "Pste. Vino v0.12.4",
+        title: "Pste. Vino v0.12.4_D",
+        url: "https://airooc41n.github.io/miapp/wine-v0.12.4_G.html"
+      },      
+      {
+        title: "Pste. Vino v0.12.4_G",
         url: "https://airooc41n.github.io/miapp/wine-v0.12.4_G.html"
       },
       {
