--- a/index.html
+++ b/index.html
@@ -172,12 +172,12 @@
     // ── Aquí añades tus aplicaciones ────────────────────────────────
     const apps = [      
       {
-        title: "Pste. Vino v0.12.4_D",
+        title: "Pste. Vino v0.12.4_G",
         url: "https://airooc41n.github.io/miapp/wine-v0.12.4_G.html"
       },      
       {
-        title: "Pste. Vino v0.12.4_G",
-        url: "https://airooc41n.github.io/miapp/wine-v0.12.4_G.html"
+        title: "Pste. Vino v0.12.4_D",
+        url: "https://airooc41n.github.io/miapp/wine-v0.12.4_D.html"
       },
       {
         title: "Pste. Vino v0.12.3",
