--- a/pwa/wine-v0.12.4_G.html
+++ b/pwa/wine-v0.12.4_G.html
@@ -1,7 +1,16 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  
+<link rel="manifest" href="manifest.json">
+<script>
+  if ('serviceWorker' in navigator) {
+    window.addEventListener('load', () => {
+      navigator.serviceWorker.register('sw.js')
+        .then(reg => console.log('PWA lista'))
+        .catch(err => console.log('Error de registro', err));
+    });
+  }
+</script>
 <meta name="theme-color" content="#5e0b15">
 <meta name="msapplication-TileColor" content="#5e0b15"> 
 <meta name="apple-mobile-web-app-status-bar-style" content="black"> 
