--- a/index.html
+++ b/index.html
@@ -170,19 +170,15 @@
 
   <script>
     // ── Aquí añades tus aplicaciones ────────────────────────────────
-    const apps = [      
+    const apps = [ 
+      {
+        title: "Pste. Vino v0.12.5",
+        url: "https://airooc41n.github.io/miapp/wine-v0.12.5.html"
+      }, 
       {
         title: "Pste. Vino v0.12.4_G",
         url: "https://airooc41n.github.io/miapp/wine-v0.12.4_G.html"
-      },      
-      {
-        title: "Pste. Vino v0.12.4_D",
-        url: "https://airooc41n.github.io/miapp/wine-v0.12.4_D.html"
-      },
-      {
-        title: "Pste. Vino v0.12.3",
-        url: "https://airooc41n.github.io/miapp/wine-v0.12.3_DeepSeek.html"
-      },
+      }, 
       {
         title: "jsQR-Scan-v0.2",
         url: "https://airooc41n.github.io/miapp/jsQR-Scan-v0.2.html"
