--- a/wine-v0.12.5.html
+++ b/wine-v0.12.5.html
@@ -560,7 +560,7 @@
     }
     
     .footer-icon i { 
-        font-size: 1.8rem; 
+        font-size: 1.2rem; 
         margin-bottom: 6px; 
         color: var(--accent);
     }
@@ -985,13 +985,13 @@
     
     #search-container { 
         position: sticky; 
-        bottom: 70px; 
+        bottom: 5px; 
         background: var(--surface); 
-        padding: 16px; 
+        padding: 8px; 
         border-radius: var(--radius-lg); 
         box-shadow: var(--shadow-md); 
         z-index: 100; 
-        margin-top: 24px; 
+        margin-top: 8px; 
         display: flex; 
         align-items: center; 
         border: 1px solid var(--border);
@@ -1963,15 +1963,15 @@
     </div>
     <div class="footer-icon" onclick="navigateTo('mipasaporte')">
         <i class="fas fa-passport"></i>
-        <span>Mi pasaporte</span>
+        <span>Pasaporte</span>
     </div>
     <div class="footer-icon" onclick="navigateTo('establecimientos')">
         <i class="fas fa-store"></i>
-        <span>Establecimientos</span>
+        <span>Establec.</span>
     </div>
     <div class="footer-icon" onclick="navigateTo('miestablecimiento')">
         <i class="fas fa-user-tie"></i>
-        <span>Mi Establecimiento</span>
+        <span>Mi Establec.</span>
     </div>
     <div class="footer-icon" onclick="navigateTo('admin')">
         <i class="fas fa-cogs"></i>
