--- a/index.html
+++ b/index.html
@@ -171,6 +171,11 @@
   <script>
     // ── Aquí añades tus aplicaciones ────────────────────────────────
     const apps = [ 
+      
+      {
+        title: "Pste. Vino v0.12.6.db",
+        url: "https://airooc41n.github.io/miapp/wine-v0.12.6.db.html"
+      },
       {
         title: "Pste. Vino v0.12.6",
         url: "https://airooc41n.github.io/miapp/wine-v0.12.6.html"
